FIX button contrast

--- a/src/scss/components/_lightbox-modal.scss
+++ b/src/scss/components/_lightbox-modal.scss
@@ -74,7 +74,7 @@
       display: block;
 
       @include respond-to("portrait") {
-        filter: drop-shadow(0 0 1rem $black);
+        filter: drop-shadow(0 0 0.25rem $black);
 
         & path {
           fill: $white;
